--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,7 +8,12 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-
+    //
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    //
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
